# slop-security-auditor

./: .dockerignore  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
docs/: pitch-deck.html
examples/: sample-input.json  test-audit.ts  test-payload.json
python/: README.md  pyproject.toml
python/slop_auditor/: __init__.py  cli.py
src/: cli.ts  index.ts  serve-visualizer.ts
src/auditor/: index.ts  pipeline.ts  validator.ts
src/client/: index.ts
src/compliance/: index.ts
src/database/: index.ts
src/integrations/: aws-scanner.ts  config.ts  github.ts  gitlab.ts  index.ts  local-scanner.ts  notifications.ts  scanners.ts  webhook.ts
src/output/: index.ts
src/pipeline/: index.ts
src/sbom/: index.ts
src/schemas/: index.ts  input.schema.ts  output.schema.ts
src/slop/: client.ts  index.ts  server.ts
src/types/: events.ts
src/visualizer/: index.ts
src/websocket/: index.ts
templates/ci/: github-actions.yml  gitlab-ci.yml
visualizer/: index-minimal.html  index.html  landing.html
